# Coderun_2024_ML

./: .gitignore  README.md  pyproject.toml  requirements.txt
Easy/548.Correct_all_typos/: last.cpp  last.py  last_pypy.py  last_with_proc.py  new.py  some.py  testing.py
Easy/548.Correct_all_typos/test/: last.py
Easy/554.Convolution_on_fingers/: convolution_slow.py
Easy/555.Convolution_there_and_back/: deconvolution.py
Easy/556.In_pursuit_of_profit/: mines.ipynb
Easy/557.Tree_with_a_trick/: solution.py
Hard/4865.1984_2/: solution.py
Hard/4866.Three_hero_2/: count.py
Hard/4867.Correct_all_typos/: analys.py  diff.py  gen.py
Hard/4867.Correct_all_typos/jobs/: job5.py  job6.py  job8.py  job9.py
Hard/4867.Correct_all_typos/jobs1/: job0.py  job11.py  job12.py  job15.py  job17.py  job18.py  job2.py  job27.py  job5.py  job7.py  job8.py
Hard/563.Anti_Punto_Switcher/: Anti_Punto_Switcher.ipynb
Medium/551.Mark_accuracy/: solution.py
Medium/553.Gode_points_in_cube/: res.ipynb
Medium/558.Beauty_requires_sacrifice/: ik.py
Medium/559.Medal_for_compresion/: solution.py
Medium/562.1984/: stop_words.py
Medium/564.How_to_get_to_the_library/: some.py
Medium/574.Summertime_at_Grandmas/: comb_llm.py  solution.py
Medium/585.CIrcle_intesections/: circle_class.py  som_try.py
problems/Easy/548.Correct_all_typos/: dif.py  maybe.py  solution.py  sp.py
problems/Easy/555.Convolution_there_and_back/: inverse.ipynb
problems/Easy/557.Tree_with_a_trick/: recomendation_tape.py
problems/Easy/567.Find_cat/: solution.py
problems/Hard/4866.Three_hero_2/: imsize.py  (+1 more)
(+48 files in other folders)
