[tool.poetry]
name = "coderun-2024-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.7"
absl-py = "0.10.0"
astunparse = "1.6.3"
cachetools = "4.1.1"
catboost = "0.23.2"
certifi = "2020.6.20"
chardet = "3.0.4"
cycler = "0.10.0"
future = "0.18.2"
gast = "0.3.3"
google-auth = "1.21.1"
google-auth-oauthlib = "0.4.1"
google-pasta = "0.2.0"
graphviz = "0.14.1"
grpcio = "1.31.0"
h5py = "2.10.0"
idna = "2.10"
importlib-metadata = "1.7.0"
joblib = "0.16.0"
keras-preprocessing = "1.1.2"
kiwisolver = "1.2.0"
markdown = "3.2.2"
matplotlib = "3.3.1"
numpy = "1.19.1"
oauthlib = "3.1.0"
opt-einsum = "3.3.0"
pandas = "1.0.5"
pillow = "7.2.0"
plotly = "4.9.0"
protobuf = "3.13.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pyparsing = "2.4.7"
python-dateutil = "2.8.1"
pytz = "2020.1"
requests = "2.24.0"
requests-oauthlib = "1.3.0"
retrying = "1.3.3"
rsa = "4.6"
scikit-learn = "0.23.1"
scipy = "1.4.1"
six = "1.15.0"
tensorboard = "2.2.2"
tensorboard-plugin-wit = "1.7.0"
tensorflow-cpu = "2.2.0"
tensorflow-estimator = "2.2.0"
termcolor = "1.1.0"
threadpoolctl = "2.1.0"
torch = "1.5.1"
urllib3 = "1.25.10"
werkzeug = "1.0.1"
wrapt = "1.12.1"
zipp = "3.1.0"
ipykernel = "^6.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
